# homelab

./: .gitignore  .gitmodules  .python-version  Pulumi.yaml  README.md  __main__.py  flake.nix  justfile  pyproject.toml  renovate.json  tach.toml
config/homelab-dagu-config/: pyproject.toml
config/homelab-dagu-config/src/homelab_dagu_config/: __init__.py
config/homelab-s3-config/: pyproject.toml
config/homelab-s3-config/src/homelab_s3_config/: __init__.py
homelab-backup/: pyproject.toml
homelab-backup-service/: pyproject.toml
homelab-backup-service/image/barman/: Dockerfile
homelab-backup-service/src/homelab_backup_service/: __init__.py  service.py
homelab-backup-service/src/homelab_backup_service/config/: __init__.py  backup.py  barman.py  restic.py
homelab-backup-service/src/homelab_backup_service/resource/: barman.py
homelab-backup/src/homelab_backup/config/: __init__.py  volume.py
homelab-backup/src/homelab_backup/model/: frequency.py  sqlite.py
homelab-config/: pyproject.toml
homelab-config/src/homelab_config/: __init__.py
homelab-config/src/homelab_config/common/: __init__.py  name.py
homelab-config/src/homelab_config/docker/: __init__.py  network.py  service.py  volume.py
homelab-config/src/homelab_config/integration/: __init__.py  s3.py
homelab-config/src/homelab_config/network/: __init__.py
homelab-dns/: pyproject.toml
homelab-dns/src/homelab_dns/: __init__.py  record.py
homelab-dns/src/homelab_dns/record/: __init__.py
homelab-docker/: pyproject.toml
homelab-docker-network/: pyproject.toml
homelab-docker/src/homelab_docker/: __init__.py  client.py  file.py  network.py  volume_path.py
homelab-docker/src/homelab_docker/config/: __init__.py  database.py  docker.py  host.py  image.py  network.py  plugin.py  service.py  user.py  volume.py
homelab-docker/src/homelab_docker/container/: __init__.py  env.py  healthcheck.py  network.py  port.py  string.py  tmpfs.py  volume.py
homelab-docker/src/homelab_docker/extract/: __init__.py  config.py  dict_.py  docker.py  global_.py  host.py  hostname.py  id.py  include.py  json.py  kv.py  list_.py  name.py  plain.py  project.py  secret.py  simple.py  variable.py  vpn.py  yaml.py
homelab-docker/src/homelab_docker/file/: __init__.py  config.py  schema.py
homelab-docker/src/homelab_docker/image/: __init__.py  platform.py  remote.py
homelab-docker/src/homelab_docker/interpolation/: __init__.py  container_string.py  container_volume_path.py  volume_path.py
homelab-docker/src/homelab_docker/model/: __init__.py  image.py  network.py  platform.py  plugin.py  service.py  user.py  volume.py
homelab-docker/src/homelab_docker/network/: __init__.py
homelab-docker/src/homelab_docker/pydantic/: __init__.py  path.py
homelab-docker/src/homelab_docker/resource/: __init__.py  common.py  container.py  docker.py  file.py  global_.py  host.py  image.py  network.py  plugin.py  service.py  volume.py
homelab-docker/src/homelab_docker/volume/: __init__.py  local.py
homelab-extract/: pyproject.toml
homelab-extract/src/homelab_extract/: __init__.py  config.py  context.py  dict_.py  docker.py  host.py  hostname.py  id.py  include.py  json.py  list_.py  name.py  simple.py  variable.py  vpn.py  yaml.py
homelab-extract/src/homelab_extract/container/: __init__.py  id.py  info.py  name.py  port.py
homelab-extract/src/homelab_extract/host/: __init__.py  info.py  network.py  vpn.py
homelab-extract/src/homelab_extract/plain/: __init__.py  s3.py  type.py
homelab-extract/src/homelab_extract/service/: __init__.py  cert.py  database.py  export.py  keepass.py  secret.py  variable.py  volume.py
homelab-extract/src/homelab_extract/transform/: __init__.py  secret.py  string.py
homelab-global/: pyproject.toml
homelab-global/src/homelab_global/: __init__.py  config.py  resource.py
homelab-mail/: pyproject.toml
homelab-mail/src/homelab_mail/: __init__.py
homelab-mail/src/homelab_mail/config/: __init__.py  no_reply.py  noreply.py  notification.py  relay.py
homelab-mail/src/homelab_mail/model/: __init__.py  no_reply.py  noreply.py  notification.py
homelab-mail/src/homelab_mail/resource/: __init__.py  no_reply.py  noreply.py  notification.py
homelab-network/: pyproject.toml
homelab-network/src/homelab_network/: __init__.py
homelab-network/src/homelab_network/config/: __init__.py  ip.py  network.py  port.py  record.py
homelab-network/src/homelab_network/model/: hostname.py  ip.py  record.py
homelab-network/src/homelab_network/resource/: hostname.py  network.py  record.py  token.py
homelab-pydantic/: pyproject.toml
homelab-pydantic/src/homelab_pydantic/: __init__.py  hostname.py  model.py  network.py  path.py
homelab-restic/: pyproject.toml
homelab-restic/src/homelab_restic/: __init__.py
homelab-restic/src/homelab_restic/host/: __init__.py  base.py  s3.py  sftp.py
homelab-secret/: pyproject.toml
homelab-secret/src/homelab_secret/: config.py
homelab-sequence/: pyproject.toml
homelab-traefik-service/: pyproject.toml
homelab-traefik-service/src/homelab_traefik_service/: __init__.py
image/balite/: Dockerfile  main.py  pyproject.toml
sdks/b2/: pyproject.toml
sdks/b2/pulumi_b2/: README.md  __init__.py  _inputs.py  _utilities.py  application_key.py  bucket.py  bucket_file_version.py  bucket_notification_rules.py  get_account_info.py  get_application_key.py  get_bucket.py  get_bucket_file.py  get_bucket_file_signed_url.py  get_bucket_files.py  get_bucket_notification_rules.py  outputs.py  provider.py  pulumi-plugin.json
service/homelab-backup-service/: pyproject.toml
service/homelab-balite-service/: pyproject.toml
service/homelab-barman-service/: pyproject.toml
service/homelab-barman-service/image/: Dockerfile
service/homelab-crowdsec-service/: pyproject.toml
service/homelab-dagu-service/: pyproject.toml
service/homelab-dozzle-service/: pyproject.toml
service/homelab-extra-service/: pyproject.toml
service/homelab-kanidm-service/: pyproject.toml
service/homelab-litestream-service/: pyproject.toml
service/homelab-mail-service/: pyproject.toml
(+1123 files in other folders)
