[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
dependencies = [
    "homelab-backup",
    "homelab-config",
    "homelab-docker",
    "homelab-mail",
    "homelab-network",
    "homelab-secret",
    "homelab-s3",
    "homelab-traefik-config",
    "homelab-dagu-config",
    "homelab-tailscale-service",
    "homelab-traefik-service",
    "homelab-dagu-service",
    "homelab-backup-service",
    "homelab-barman-service",
    "homelab-kanidm-service",
    "homelab-restic-service",
    "homelab-crowdsec-service",
    "homelab-ntfy-service",
    "homelab-gluetun-service",
    "pulumi>=3.148.0",
    "json-fix>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.13.1"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "mypy>=1.14.1",
    "datamodel-code-generator[http]>=0.28.1",
    "ruff>=0.9.6",
]

[tool.uv.sources]
homelab-backup = { workspace = true }
homelab-config = { workspace = true }
homelab-docker = { workspace = true }
homelab-pydantic = { workspace = true }
homelab-mail = { workspace = true }
homelab-network = { workspace = true }
homelab-s3 = { workspace = true }
homelab-secret = { workspace = true }
homelab-vpn = { workspace = true }

homelab-dagu-config = { workspace = true }
homelab-s3-config = { workspace = true }
homelab-traefik-config = { workspace = true }

homelab-backup-service = { workspace = true }
homelab-barman-service = { workspace = true }
homelab-crowdsec-service = { workspace = true }
homelab-dagu-service = { workspace = true }
homelab-extra-service = { workspace = true }
homelab-gluetun-service = { workspace = true }
homelab-kanidm-service = { workspace = true }
homelab-ntfy-service = { workspace = true }
homelab-restic-service = { workspace = true }
homelab-tailscale-service = { workspace = true }
homelab-traefik-service = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/homelab"]

[tool.uv.workspace]
members = ["homelab-*", "config/homelab-*", "service/homelab-*"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["json_fix.*", "pykeepass.*"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I", "PERF", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pydantic.BaseModel".msg = "Use homelab_pydantic.HomelabBaseModel instead"
"pydantic.RootModel".msg = "Use homelab_pydantic.HomelabRootModel instead"
