[project]
name = "homelab-backup-service"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
dependencies = [
    "homelab-docker",
    "pulumi>=3.148.0",
    "pydantic>=2.10.6",
]
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_backup_service"]

[tool.mypy]
strict = true
