[project]
name = "homelab-backup"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = ["homelab-pydantic", "homelab-extract"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
homelab-pydantic = { workspace = true }
