[project]
name = "homelab-config"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-docker",
    "homelab-network",
    "homelab-pydantic",
    "pulumi>=3.147.0",
    "deepmerge>=2.0",
    "pyyaml>=6.0.2",
    "homelab-global",
    "homelab-backup",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = ["types-pyyaml>=6.0.12.20241230"]

[tool.ruff]
extend = "../pyproject.toml"
