[project]
name = "homelab-config"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-docker",
    "homelab-network",
    "homelab-pydantic",
    "pulumi>=3.147.0",
    "deepmerge>=2.0",
    "homelab-global",
    "homelab-backup",
    "yaml-rs>=0.0.9",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"
