[project]
name = "homelab-docker"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-sequence",
    "homelab-secret",
    "homelab-s3",
    "homelab-vpn",
    "homelab-network",
    "homelab-extract",
    "pulumi-docker>=4.6.1",
    "pydantic>=2.10.6",
    "pydantic-extra-types>=2.10.2",
    "docker>=7.1.0",
    "pulumi-random>=4.17.0",
    "pulumi-docker-build>=0.0.10",
    "jsonschema>=4.23.0",
    "pulumi>=3.207.0",
    "pulumi-tls>=5.2.2",
    "homelab-global",
    "homelab-restic",
    "homelab-backup",
    "paramiko>=4.0.0",
    "orjson>=3.11.5",
    "yaml-rs>=0.0.9",
    "rtoml>=0.13.0",
]

[dependency-groups]
dev = [
    "types-docker>=7.1.0.20241229",
    "types-jsonschema>=4.23.0.20241208",
    "types-paramiko>=4.0.0.20250822",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"
