[project]
name = "homelab-global"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = ["homelab-mail", "homelab-pydantic", "homelab-s3"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"
