[project]
name = "homelab-network"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "pydantic>=2.10.6",
    "pulumi>=3.148.0",
    "pulumi-cloudflare>=5.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
