[project]
name = "homelab-network"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "pydantic>=2.10.6",
    "pulumi>=3.148.0",
    "pulumi-cloudflare>=5.49.0",
    "homelab-global",
    "orjson>=3.11.5",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"
