[project]
name = "homelab-pydantic"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = ["pydantic>=2.10.6", "deepmerge>=2.0"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
