[project]
name = "homelab-restic"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-s3",
    "homelab-extract",
    "homelab-secret",
    "pulumi>=3.207.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
extend = "../pyproject.toml"
