[project]
name = "homelab-secret"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-network",
    "homelab-extract",
    "pydantic>=2.10.6",
    "pulumi>=3.147.0",
    "pulumi-random>=4.17.0",
    "pykeepass>=4.1.1.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../pyproject.toml"
