[project]
name = "homelab-dagu-config"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-docker",
    "pydantic>=2.10.6",
    "homelab-extract",
    "pulumi>=3.207.0",
    "homelab-backup",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
