[project]
name = "homelab-balite-docker"
version = "0.1.0"
requires-python = ">=3.14.4"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqlite-backup>=0.1.7",
    "typer>=0.15.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
homelab-balite = "homelab_balite_docker:main"
