[project]
name = "homelab-barman-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-backup",
    "homelab-docker",
    "homelab-dagu-config",
    "pulumi>=3.148.0",
    "pydantic>=2.10.6",
    "homelab-extract",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
