[project]
name = "homelab-crowdsec-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-docker",
    "homelab-traefik-service",
    "homelab-dagu-service",
    "pulumi>=3.150.0",
    "pulumi-random>=4.17.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
