[project]
name = "homelab-crowdsec-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-docker",
    "pulumi>=3.150.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
