[project]
name = "homelab-dagu-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.12.3"
dependencies = [
    "homelab-docker",
    "homelab-traefik-service",
    "pydantic>=2.10.6",
    "pulumi>=3.148.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
