[project]
name = "homelab-dagu-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-backup",
    "homelab-pydantic",
    "homelab-docker",
    "homelab-extra-service",
    "pydantic>=2.10.6",
    "pulumi>=3.148.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
