[project]
name = "homelab-dagu-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-docker",
    "homelab-dagu-config",
    "homelab-extra-service",
    "pydantic>=2.10.6",
    "pulumi>=3.148.0",
    "homelab-extract",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../../pyproject.toml"
