[project]
name = "homelab-dozzle-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = ["homelab-docker", "homelab-traefik-service", "pulumi>=3.148.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
