[project]
name = "homelab-extra-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-docker",
    "homelab-dagu-config",
    "homelab-traefik-config",
    "pulumi>=3.148.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../../pyproject.toml"
