[project]
name = "homelab-kanidm-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.13.1"
dependencies = [
    "homelab-pydantic",
    "homelab-docker",
    "homelab-traefik-config",
    "pydantic>=2.10.6",
    "pulumi>=3.148.0",
    "homelab-extract",
    "homelab-dagu-config",
    "pexpect>=4.9.0",
]

[dependency-groups]
dev = ["types-pexpect>=4.9.0.20250916"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../../pyproject.toml"
