[project]
name = "homelab-litestream-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.14.0"
dependencies = [
    "homelab-pydantic",
    "homelab-backup",
    "homelab-docker",
    "homelab-dagu-config",
    "pulumi>=3.148.0",
    "homelab-extract",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../../pyproject.toml"
