[project]
name = "homelab-mail-service"
version = "0.1.0"
authors = [{ name = "Vo Van Nghia", email = "git@vnghia.com" }]
requires-python = ">=3.14.4"
dependencies = [
    "homelab-docker",
    "homelab-extra-service",
    "pulumi>=3.148.0",
    "homelab-extract",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
extend = "../../pyproject.toml"
